# ChannelPointPlugin

./: .ai_rules.md  .gitignore  CMakeLists.txt  README.md  WIP_STATE.md  plugin.json  test_result.txt
build_release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_release/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_release/ChannelPointPlugin_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_release/ChannelPointPlugin_autogen/L3BDCI33OQ/: moc_AnalyticsManager.cpp  moc_AnalyticsManager.cpp.d  moc_EffectManager.cpp  moc_EffectManager.cpp.d  moc_ObsNotifier.cpp  moc_ObsNotifier.cpp.d  moc_QueueManager.cpp  moc_QueueManager.cpp.d
build_release/ChannelPointPlugin_autogen/UVLADIE3JM/: moc_ChannelPointPlugin.cpp  moc_ChannelPointPlugin.cpp.d
build_release/ChannelPointPlugin_autogen/YPKJ5OE7LN/: moc_PluginMainWidget.cpp  moc_PluginMainWidget.cpp.d  moc_VisualPreviewWidget.cpp  moc_VisualPreviewWidget.cpp.d
doc/: 01_RequirementsSpecification.md  02_BasicDesignSpecification.md  03_DetailedDesignSpecification.md  04_UnitTestSpecification.md  05_IntegrationTestSpecification.md  06_SystemTestSpecification.md
scripts/: create_decision_log.php  manage_wip_state.php  update_docs.ps1
src/: ChannelPointPlugin.cpp  ChannelPointPlugin.h
src/modules/: AnalyticsManager.cpp  AnalyticsManager.h  EffectManager.cpp  EffectManager.h  ObsNotifier.cpp  ObsNotifier.h  QueueManager.cpp  QueueManager.h
src/types/: ChannelPointTypes.h
src/ui/: PluginMainWidget.cpp  PluginMainWidget.h  VisualPreviewWidget.cpp  VisualPreviewWidget.h
test/: TestMain.cpp
